--- a/css/style.css
+++ b/css/style.css
@@ -605,6 +605,40 @@ section {
   gap: 0.5rem;
   padding: 1rem 0;
 }
+.shopping-cart .box-container .box .content form span {
+  color: #666;
+  font-size: 1.5rem;
+}
+.shopping-cart .box-container .box .content form input {
+  width: 8rem;
+  font-size: 1.5rem;
+  color: #666;
+  padding: 0.5rem 1rem;
+  border-radius: 0.5rem;
+  background: #eee;
+}
+.shopping-cart .box-container .box .content .price {
+  font-size: 2rem;
+  color: #333;
+}
+.shopping-cart .box-container .box .content .price span {
+  color: #666;
+  font-size: 1.5rem;
+  text-decoration: line-through;
+}
+.shopping-cart .cart-total {
+  padding: 2rem;
+  border-radius: 0.5rem;
+  border: 0.2rem solid #333;
+}
+.shopping-cart .cart-total h3 {
+  margin-bottom: 1rem;
+  font-size: 2rem;
+  color: #333;
+}
+.shopping-cart .cart-total h3 span {
+  color: #e84393;
+}
 
 /* ======= Footer Section/Seção de rodapé ======= */
 .footer .box-container {
@@ -711,6 +745,10 @@ section {
 
   .home .slide .content {
     font-size: 4rem;
+  }
+
+  .shopping-cart .box-container .box {
+    flex-flow: column;
   }
 }
 /*
