--- a/css/style.scss
+++ b/css/style.scss
@@ -725,7 +725,48 @@ section {
                     align-items: center;
                     gap: .5rem;
                     padding: 1rem 0;
+
+                    span {
+                        color: $light-color;
+                        font-size: 1.5rem;
+                    }
+
+                    input {
+                        width: 8rem;
+                        font-size: 1.5rem;
+                        color: $light-color;
+                        padding: .5rem 1rem;
+                        border-radius: .5rem;
+                        background: $light-bg;
+                    }
                 }
+
+                .price {
+                    font-size: 2rem;
+                    color: $black;
+
+                    span {
+                        color: $light-color;
+                        font-size: 1.5rem;
+                        text-decoration: line-through;
+                    }
+                }
+            }
+        }
+    }
+
+    .cart-total {
+        padding: 2rem;
+        border-radius: .5rem;
+        border: $border;
+
+        h3 {
+            margin-bottom: 1rem;
+            font-size: 2rem;
+            color: $black;
+
+            span {
+                color: $pink;
             }
         }
     }
@@ -871,6 +912,10 @@ section {
 
     .home .slide .content {
         font-size: 4rem;
+    }
+
+    .shopping-cart .box-container .box {
+        flex-flow: column;
     }
 }
 
